corrected ARIA role in header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Amaranth|Passion+One|Roboto" rel="stylesheet">
   </head>
   <body>
-    <header role="header" class="site-header">
+    <header role="banner" class="site-header">
       <h1>US Women's Gymnastics</h1>
     </header>
   
